<resources>
    <string name="app_name">HelthyWallet</string>
    <string name="hint_category">please enter category</string>
    <string name="hint_amount">please enter amount</string>
    <string name="hint_title">please enter title</string>
    <string name="hint_date">please enter date</string>
    <string name="btn_submit">Dodaj</string>
    <string name="btn_show_data">Show Data</string>
    <string name="btn_edit_data">Edit Data</string>
    <string name="btn_delete_data">Delete Data</string>
    <string name="data">Data from the database</string>
    
    <string-array name="cats">
        <item>Zakupy</item>
        <item>Dom</item>
        <item>Rachunki</item>
        <item>Paliwo</item>
        <item>Samochód</item>
        <item>Pensja</item>
        <item>Inne</item>
    </string-array>
</resources>
