<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainViewChart"
    android:background="@color/mainColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_title"
            android:inputType="text"
            android:textColorHint="#ffff"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/inAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_amount"
            android:inputType="text"
            android:textColorHint="#ffff"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/inDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="input date"
            android:inputType="text"
            android:textColorHint="#FFFFFF"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/inCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_category"
            android:inputType="text"
            android:textColorHint="#ffff"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/addDataBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnSubmit"
            android:text="@string/btn_submit" />

        <Button
            android:id="@+id/readDataBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnShowData"
            android:text="@string/btn_show_data" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnEditData"
            android:text="@string/btn_edit_data" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnDeleteData"
            android:text="@string/btn_delete_data" />

        <TextView
            android:id="@+id/viewData"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:text="@string/data" />

    </LinearLayout>

</RelativeLayout>